2010-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-accept-article): Remove the "." at the end,
	since some servers don't like it.
	(nnimap-open-connection): Forget credentials if the server says the
	password was wrong.
	(nnimap-parse-line): Protect against invalid data.

	* gnus-sum.el (gnus-summary-move-article): Add comment.
	(gnus-summary-insert-new-articles): Copy the old-high watermark so that
	nothing alters it while scanning for new messages.

	* nnimap.el (nnimap-request-accept-article): Send a "." at the end,
	which may or may not help.
	(nnimap-open-connection): If we're doing a stream connection, and then
	discover we're on a STARTTLS-capable server, then open a STARTTLS
	connection instead.

2010-09-27  Florian Ragwitz  <rafl@debian.org>  (tiny change)

	* sieve-manage.el (sieve-manage-default-stream): Make default stream
	customizable.

2010-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (utf7): Required.

	* message.el (message-cite-prefix-regexp): Remove "}" from citation
	prefix.

2010-09-27  Juanma Barranquero  <lekktu@gmail.com>

	* nnmail.el (nnmail-fancy-expiry-targets): Fix typo in docstring.

2010-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-accept-article): Message the error on
	error.

2010-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-delete-part): Fix Lisp type of byte(s).

2010-09-26  Florian Ragwitz  <rafl@debian.org>  (tiny change)

	* gnus-html.el (gnus-html-wash-tags): Decode URL entities to avoid
	handing broken links to browse-url.

2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nndoc.el (nndoc-request-list): Return success always.

	* gnus-agent.el (gnus-agent-retrieve-headers): Don't propagate
	`fetch-old' -- we only want to fetch the articles we've requested.  The
	rest are in the agent, probably.
	(gnus-agent-read-servers-validate): Change the level for the "Ignoring